smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-identifieir-key2.smithy
// Syntax error at line 2, column 5: Expected COLON(':') but found DOT('.') | Model
$foo.bar: "1.0"
